# LR8

./: CMakeLists.txt
Task_1/: CMakeLists.txt  checks.cpp  file.cpp  fun1.cpp  funelastic.cpp  header.h  hehe.h  main.cpp
Task_2/: CMakeLists.txt  checks.cpp  file.cpp  fun.cpp  funelastic.cpp  header.h  hehe.h  main.cpp
